# django-postgres-indexes-vectors-more

./: .dockerignore  .evn-ex  .gitignore  Dockerfile  README.md  manage.py  notes-on-pgvector-tutorial-1.md  notes.txt  package-lock.json  pgvector-notes.md  pgvectortutorial.ipynb  postgres.yaml  postgres_up.sh  pyproject.toml  requirements.txt  run-tailwind-linux.ps1  tailwind.config.js
.ipynb_checkpoints/: pgvectortutorial-checkpoint.ipynb
forkprojectapplication/accounts/: apps.py  forms.py  models.py  urls.py  views.py
forkprojectapplication/accounts/management/commands/: setup_groups.py
forkprojectapplication/accounts/migrations/: 0001_initial.py
forkprojectapplication/accounts/templates/: login_signup.html
forkprojectapplication/common/: apps.py  entity_middleware.py  models.py  urls.py  views.py
forkprojectapplication/common/templates/: base.html
forkprojectapplication/common/templates/partials/: home_page.html  navbar.html
forkprojectapplication/firstapp/: Untitled.ipynb  apps.py  main.py  titanic.py
forkprojectapplication/forkproject/: asgi.py  settings.py  urls.py  wsgi.py
forkprojectapplication/loggers/: admin.py  apps.py  db_log_handler.py  models.py  services.py  signals.py
forkprojectapplication/loggers/migrations/: 0001_initial.py
forkprojectapplication/static/: tailwind-output.css
