[project]
name = "django-fork-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django-structlog>=8.1.0",
    "django>=5.1.3",
    "django-auditlog>=3.0.0",
    "psycopg-binary>=3.2.3",
    "psycopg>=3.2.3",
    "whitenoise>=6.8.2",
    "python-dotenv>=1.0.1",
    "pgvector>=0.4.2",
    "langchain>=1.2.13",
    "openai>=2.29.0",
    "pandasai>=3.0.0",
    "pandasai-litellm>=0.0.1",
    "streamlit>=1.55.0",
    "notebook>=7.5.5",
]

[dependency-groups]
development = [
    "pgvector>=0.4.2",
]
local = [
    "django-debug-toolbar>=4.4.6",
    "kolo>=2.34.2",
]
